working on reviewseervice

--- a/RentViewReviewService/src/main/webapp/index.html
+++ b/RentViewReviewService/src/main/webapp/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Start Page</title>
+        <title>Review Search</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>Search for Reviews by Movie ID</h1>
+        <form action="webresources/reviews/" method="get">
+            <input type="text" name="movieID" placeholder="Enter Movie ID">
+            <input type="submit" value="Search">
+        </form>
     </body>
 </html>
